--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,10 +2,10 @@
 galaxy_info:
   author: Mathieu BEDOS
   role_name: haproxy
-  namespace: simple
+  namespace: Simple-Ansible
   description: Simple manage haproxy
   company: none
-  license: MLP2
+  license: Apache-2.0
   min_ansible_version: "2.20"
   platforms:
     - name: Debian
